--- a/pintxos/index.html
+++ b/pintxos/index.html
@@ -62,6 +62,7 @@
 
 <script>
   window.decomp = decomp;
+  Matter.Common.setDecomp(decomp);
 
   const Engine = Matter.Engine,
         Render = Matter.Render,
@@ -309,3 +310,4 @@
 </script>
 </body>
 </html>
+
