--- a/pintxos/index.html
+++ b/pintxos/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/poly-decomp@0.3.0/build/decomp.min.js"></script>
   <script src="./shape-extract.js"></script>
+　<script src="shape-extract.js?v=7"></script>
 
   <style>
     body{margin:0;overflow:hidden;background:#f3f3f3;font-family:system-ui,-apple-system,sans-serif;touch-action:none}
@@ -292,3 +293,4 @@
 </script>
 </body>
 </html>
+
